[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A set of simple brain games"
authors = ["ajib6ept <asAlbert@narod.ru>"]
repository = "https://github.com/ajib6ept/python-project-lvl1"
packages = [
  { include = "brain_games" },
]
classifiers = ["Topic :: Games/Entertainment"]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
